--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,2 +1,19 @@
-h1 {
+header * {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+h1,
+h2 {
+  margin: 0 15px;
+}
+
+nav button {
+  margin: 0 45px;
+}
+
+h2 {
+  justify-self: baseline;
 }
