--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,3 +1,7 @@
+header {
+  padding-bottom: 400px;
+}
+
 header * {
   display: flex;
   flex-direction: row;
@@ -5,15 +9,14 @@ header * {
   align-items: center;
 }
 
-h1,
-h2 {
+h1 {
   margin: 0 15px;
+}
+
+h2 {
+  align-content: center;
 }
 
 nav button {
   margin: 0 45px;
-}
-
-h2 {
-  justify-self: baseline;
 }
