--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -37,8 +37,7 @@ nav button {
 }
 
 main {
-  background-color: midnightblue;
-  padding-bottom: 300px;
+  padding-bottom: 0px;
 }
 
 main * {
@@ -51,6 +50,7 @@ main h1 {
   margin: 0;
   justify-content: center;
   padding-top: 20px;
+  background-color: grey;
 }
 
 main ul {
@@ -59,17 +59,25 @@ main ul {
   justify-content: center;
 }
 
-main section {
+main li {
+  margin: 0;
+  padding: 0;
+}
+
+footer {
+  background-color: grey;
+  text-align: center;
+  padding: 20px 0;
+}
+
+.featured-work {
+  background-color: midnightblue;
+}
+.content {
   display: grid;
   justify-content: center;
+  background-color: midnightblue;
 }
-
-#bigimage {
-  margin: 0 0;
-  padding: 40px 0;
-  justify-self: center;
-}
-
 .projects {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -77,10 +85,13 @@ main section {
   gap: 60px;
 }
 
-section li {
+.contact-me {
+  display: block;
+  background-color: lightslategray;
 }
 
-main li {
-  margin: 0;
-  padding: 0;
+#bigimage {
+  margin: 0 0;
+  padding: 40px 0;
+  justify-self: center;
 }
