--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -9,9 +9,28 @@ header {
  align-items: center;
 }
 
+header h1 {
+ font-family: 'Trajan Pro';
+ font-size: larger;
+ font-weight: 800;
+}
+
+header h2 {
+ padding-bottom: 5px;
+ font-family: 'Trajan Pro';
+ font-size: large;
+ font-weight: 800;
+}
+
+main h2 {
+ font-weight: bolder;
+ font-size: larger;
+}
+
 header li {
  display: flex;
  justify-content: center;
+ padding: 3px 0;
 }
 
 #about-me {
@@ -52,6 +71,7 @@ header li {
 
 figcaption {
  text-align: center;
+ padding-bottom: 20px;
 }
 
 #contact-me {
