--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -7,19 +7,28 @@ header {
  display: flex;
  flex-direction: column;
  align-items: center;
+ border-bottom: 3px solid black;
+ overflow: hidden;
+ position: fixed;
+ top: 0%;
+ width: 100%;
 }
 
 header h1 {
  font-family: 'Trajan Pro';
- font-size: larger;
+ font-size: 2rem;
  font-weight: 800;
 }
 
 header h2 {
- padding-bottom: 5px;
+ padding-bottom: 20px;
  font-family: 'Trajan Pro';
  font-size: large;
  font-weight: 800;
+}
+
+main {
+ margin-top: 200px;
 }
 
 main h2 {
@@ -30,7 +39,9 @@ main h2 {
 header li {
  display: flex;
  justify-content: center;
- padding: 3px 0;
+ padding: 3px 70px;
+ border-top: 3px solid black;
+ border-width: 100%;
 }
 
 #about-me {
@@ -76,8 +87,8 @@ figcaption {
 
 #contact-me {
  background-color: teal;
- display: flex;
- justify-content: space-between;
+ display: block;
+ text-align: center;
 }
 
 .responsive {
