--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -12,15 +12,6 @@ h2 {
  color: seagreen;
 }
 
-#profile-pic {
- display: flex;
- justify-self: center;
- align-self: center;
- border: 2px solid seagreen;
- border-radius: 125px;
- margin-top: 20px;
-}
-
 header {
  background-color: var(--header-footer-color);
  display: flex;
@@ -46,6 +37,14 @@ header h2 {
  font-weight: 800;
 }
 
+header li {
+ display: flex;
+ justify-content: center;
+ padding: 3px 70px;
+ border-top: 3px solid black;
+ border-width: 100%;
+}
+
 main {
  margin-top: 150px;
 }
@@ -60,12 +59,13 @@ main h2 {
  border-bottom: 3px solid black;
 }
 
-header li {
+#profile-pic {
  display: flex;
- justify-content: center;
- padding: 3px 70px;
- border-top: 3px solid black;
- border-width: 100%;
+ justify-self: center;
+ align-self: center;
+ border: 2px solid seagreen;
+ border-radius: 125px;
+ margin-top: 20px;
 }
 
 #about-me {
@@ -78,6 +78,8 @@ header li {
 #about-me p {
  margin: 5rem;
  text-align: center;
+ padding-left: 5px;
+ padding-right: 5px;
  border-left: 1px solid black;
  border-right: 1px solid black;
 }
@@ -152,12 +154,56 @@ footer {
 
 @media screen and (min-width: 1024px) {
  header {
+  background-color: var(--header-footer-color);
+  display: flex;
+  flex-direction: row;
+  position: relative;
  }
 
+ header * {
+  flex-direction: row;
+ }
+
+ header h1 {
+  order: 2;
+ }
+
+ header h2 {
+  order: 3;
+ }
+
+ header li a {
+  display: flex;
+  flex-direction: row;
+  padding: 3px 70px;
+ }
+
+ main {
+  margin-top: 0;
+ }
+
+ header li {
+  font-size: 18px;
+ }
+
+ main h2 {
+  font-size: 22px;
+ }
  #about-me p {
   max-width: 50%;
   padding-left: 5px;
   padding-right: 5px;
+  font-size: 18px;
+  border-left-width: 3px;
+  border-right-width: 3px;
+ }
+
+ figure img {
+  border: 3px solid seagreen;
+  min-height: 200px;
+  max-height: 300px;
+  min-width: 400px;
+  max-width: 400px;
  }
 
  figcaption {
