--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -35,6 +35,7 @@ header h2 {
  font-family: 'Trajan Pro';
  font-size: large;
  font-weight: 800;
+ text-align: center;
 }
 
 header li {
@@ -56,6 +57,7 @@ main h2 {
  padding-top: 20px;
  padding-left: 25px;
  padding-right: 25px;
+ padding-bottom: 10px;
  border-bottom: 3px solid black;
 }
 
@@ -157,38 +159,61 @@ footer {
   background-color: var(--header-footer-color);
   display: flex;
   flex-direction: row;
+  overflow: auto;
   position: relative;
+  top: auto;
+ }
+
+ header {
+  justify-content: space-between;
+  align-items: center;
+  align-content: center;
  }
 
  header * {
+  display: flex;
   flex-direction: row;
+  margin: 0;
+  padding-left: 0;
+  padding-right: 0;
  }
 
- header h1 {
-  order: 2;
+ header nav {
+  display: flex;
+  flex-direction: row;
+  padding: 3px 0;
+  border: none;
+  justify-self: end;
+  justify-items: end;
+ }
+
+ #page-title {
+  flex-direction: column;
+  align-content: center;
+  padding-bottom: 10px;
+ }
+
+ header li {
+  border: none;
+  font-size: 18px;
+  margin: 0;
+  padding-left: 15px;
+  padding-right: 5px;
  }
 
  header h2 {
-  order: 3;
- }
-
- header li a {
-  display: flex;
-  flex-direction: row;
-  padding: 3px 70px;
+  padding-bottom: 0;
+  align-self: center;
  }
 
  main {
   margin-top: 0;
  }
 
- header li {
-  font-size: 18px;
- }
-
  main h2 {
   font-size: 22px;
  }
+
  #about-me p {
   max-width: 50%;
   padding-left: 5px;
@@ -196,6 +221,26 @@ footer {
   font-size: 18px;
   border-left-width: 3px;
   border-right-width: 3px;
+ }
+
+ section div * {
+  justify-content: center;
+  align-self: center;
+  width: 100%;
+ }
+ section div figure a img {
+  min-width: 75%;
+  min-height: 400px;
+ }
+
+ #featured-project {
+  display: block;
+  width: 100%;
+  max-width: 400px;
+  height: auto;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
  }
 
  figure img {
