--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -25,16 +25,16 @@ header {
 }
 
 header h1 {
- font-family: 'Trajan Pro';
+ font-family: 'trajan-pro-3';
  font-size: 2rem;
- font-weight: 800;
+ font-weight: 600;
 }
 
 header h2 {
  padding-bottom: 20px;
- font-family: 'Trajan Pro';
+ font-family: 'Trajan-pro-3';
  font-size: large;
- font-weight: 800;
+ font-weight: 700;
  text-align: center;
 }
 
@@ -191,6 +191,7 @@ footer {
   flex-direction: column;
   align-content: center;
   padding-bottom: 10px;
+  margin-left: 5%;
  }
 
  header li {
